// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Page 1`] = `
[
  <div
    className="cxd-Page"
    onClick={[Function]}
  >
    <div
      className="cxd-Page-content"
    >
      <div
        className="cxd-Page-main"
      >
        <div
          className="cxd-Page-headerRow"
        >
          <div
            className="cxd-Page-header"
          >
            <h2
              className="cxd-Page-title"
            >
              <span
                className="cxd-TplField fr-view"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  dangerouslySetInnerHTML={
                    {
                      "__html": "This is Title",
                    }
                  }
                />
              </span>
              <div
                className="cxd-Remark cxd-Remark--warning"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  className="cxd-Remark-icon"
                >
                  <icon-mock
                    className="icon-question-mark"
                    icon="question-mark"
                  />
                </span>
              </div>
            </h2>
            <small
              className="cxd-Page-subTitle"
            >
              <span
                className="cxd-TplField fr-view"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  dangerouslySetInnerHTML={
                    {
                      "__html": "This is SubTitle",
                    }
                  }
                />
              </span>
            </small>
          </div>
          <div
            className="cxd-Page-toolbar"
          >
            <span
              className="cxd-TplField fr-view"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <span
                dangerouslySetInnerHTML={
                  {
                    "__html": "This is toolbar",
                  }
                }
              />
            </span>
          </div>
        </div>
        <div
          className="cxd-Page-body"
          role="page-body"
        >
          <span
            className="cxd-Spinner-mark"
          />
          <span
            className="cxd-TplField fr-view"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              dangerouslySetInnerHTML={
                {
                  "__html": "This is body",
                }
              }
            />
          </span>
        </div>
      </div>
    </div>
  </div>,
  <span
    className="cxd-Spinner-mark"
  />,
]
`;

exports[`Renderer:Page classNames 1`] = `
<div>
  <div
    class="cxd-Page cxd-Page--withSidebar cxd-Page--asideSticky cxd-Page--leftAside"
  >
    <div
      class="cxd-Page-aside cxd-Page-aside--withWidth aside-class-name"
    >
      <div
        class="cxd-TplField fr-view cxd-Page-asideTplWrapper"
      >
        <span>
          This is aside
        </span>
      </div>
    </div>
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-headerRow"
        >
          <div
            class="cxd-Page-header header-class-name"
          >
            <h2
              class="cxd-Page-title"
            >
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  This is Title
                </span>
              </span>
              <div
                class="cxd-Remark cxd-Remark--warning"
              >
                <span
                  class="cxd-Remark-icon"
                >
                  <icon-mock
                    classname="icon-question-mark"
                    icon="question-mark"
                  />
                </span>
              </div>
            </h2>
            <small
              class="cxd-Page-subTitle"
            >
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  This is SubTitle
                </span>
              </span>
            </small>
          </div>
          <div
            class="cxd-Page-toolbar toolbar-class-name"
          >
            <span
              class="cxd-TplField fr-view"
            >
              <span>
                This is toolbar
              </span>
            </span>
          </div>
        </div>
        <div
          class="cxd-Page-body body-class-name"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              This is body
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=ajax & feedback 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              RequestAjax
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable a is 6
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget cxd-Modal cxd-Modal--1th"
    role="dialog"
  >
    <div
      class="cxd-Modal-overlay in"
    />
    <div
      class="cxd-Modal-content in"
    >
      <div
        class="cxd-Modal-header"
      >
        <a
          class="cxd-Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </a>
        <div
          class="cxd-Modal-title"
        >
          弹框
        </div>
      </div>
      <div
        class="cxd-Modal-body"
        role="dialog-body"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            this is feedback
          </span>
        </span>
      </div>
      <div
        class="cxd-Modal-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=ajax & feedback 2`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              RequestAjax
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable a is 6
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=ajax 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              RequestAjax
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable a is 6
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=dialog default 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=dialog default 2`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=dialog mergeData 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable a is 
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget cxd-Modal cxd-Modal--1th"
    role="dialog"
  >
    <div
      class="cxd-Modal-overlay in"
    />
    <div
      class="cxd-Modal-content in"
    >
      <div
        class="cxd-Modal-header"
      >
        <a
          class="cxd-Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </a>
        <div
          class="cxd-Modal-title"
        >
          弹框
        </div>
      </div>
      <div
        class="cxd-Modal-body"
        role="dialog-body"
      >
        <form
          class="cxd-Form cxd-Form--horizontal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="cxd-Form-item cxd-Form-item--horizontal"
            data-amis-name="a"
            data-role="form-item"
          >
            <label
              class="cxd-Form-label cxd-Form-itemColumn--normal"
            >
              <span>
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    A
                  </span>
                </span>
              </span>
            </label>
            <div
              class="cxd-Form-value"
            >
              <div
                class="cxd-Form-control cxd-TextControl"
              >
                <div
                  class="cxd-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="a"
                    placeholder=""
                    size="10"
                    type="text"
                    value="3"
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="cxd-Modal-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="submit"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=dialog mergeData 2`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable a is 3
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=drawer default 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              OpenDrawer
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        />
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget cxd-Drawer cxd-Drawer--right cxd-Drawer--md cxd-Modal--1th"
    role="dialog"
  >
    <div
      class="cxd-Drawer-overlay in"
    />
    <div
      class="cxd-Drawer-content in"
    >
      <a
        class="cxd-Drawer-close"
      >
        <icon-mock
          classname="icon icon-close"
          icon="close"
        />
      </a>
      <div
        class="cxd-Drawer-body"
      >
        <div
          class="cxd-Spinner-overlay in"
        />
        <div
          class="cxd-Spinner cxd-Spinner--overlay in"
          data-testid="spinner"
        >
          <div
            class="cxd-Spinner-icon cxd-Spinner-icon--lg cxd-Spinner-icon--default"
          />
        </div>
      </div>
      <div
        class="cxd-Drawer-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=drawer default 2`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              OpenDrawer
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=drawer mergeData 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              OpenDrawer
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable a is 
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget cxd-Drawer cxd-Drawer--right cxd-Drawer--md cxd-Modal--1th"
    role="dialog"
  >
    <div
      class="cxd-Drawer-overlay in"
    />
    <div
      class="cxd-Drawer-content in"
    >
      <a
        class="cxd-Drawer-close"
      >
        <icon-mock
          classname="icon icon-close"
          icon="close"
        />
      </a>
      <div
        class="cxd-Drawer-body"
        role="dialog-body"
      >
        <form
          class="cxd-Form cxd-Form--horizontal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="cxd-Form-item cxd-Form-item--horizontal"
            data-amis-name="a"
            data-role="form-item"
          >
            <label
              class="cxd-Form-label cxd-Form-itemColumn--normal"
            >
              <span>
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    A
                  </span>
                </span>
              </span>
            </label>
            <div
              class="cxd-Form-value"
            >
              <div
                class="cxd-Form-control cxd-TextControl"
              >
                <div
                  class="cxd-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="a"
                    placeholder=""
                    size="10"
                    type="text"
                    value="3"
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="cxd-Drawer-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="submit"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=drawer mergeData 2`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              OpenDrawer
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable a is 3
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable value is 2
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi error show Message 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Alert cxd-Alert--danger"
          >
            <div
              class="cxd-Alert-content"
            >
              <div
                class="cxd-Alert-desc"
              >
                Internal Error
              </div>
            </div>
            <button
              class="cxd-Alert-close"
              type="button"
            >
              <icon-mock
                classname="icon icon-close"
                icon="close"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reFetch when condition changes 1`] = `
[
  <div
    className="cxd-Page"
    onClick={[Function]}
  >
    <div
      className="cxd-Page-content"
    >
      <div
        className="cxd-Page-main"
      >
        <div
          className="cxd-Page-body"
          role="page-body"
        >
          <span
            className="cxd-Spinner-mark"
          />
          <span
            className="cxd-TplField fr-view"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              dangerouslySetInnerHTML={
                {
                  "__html": "The variable value is 1",
                }
              }
            />
          </span>
        </div>
      </div>
    </div>
  </div>,
  <span
    className="cxd-Spinner-mark"
  />,
]
`;

exports[`Renderer:Page initApi reFetch when condition changes 2`] = `
[
  <div
    className="cxd-Page"
    onClick={[Function]}
  >
    <div
      className="cxd-Page-content"
    >
      <div
        className="cxd-Page-main"
      >
        <div
          className="cxd-Page-body"
          role="page-body"
        >
          <span
            className="cxd-Spinner-mark"
          />
          <span
            className="cxd-TplField fr-view"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              dangerouslySetInnerHTML={
                {
                  "__html": "The variable value is 2",
                }
              }
            />
          </span>
        </div>
      </div>
    </div>
  </div>,
  <span
    className="cxd-Spinner-mark"
  />,
]
`;

exports[`Renderer:Page initApi reload by Dialog action 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Dialog action 2`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget cxd-Modal cxd-Modal--1th"
    role="dialog"
  >
    <div
      class="cxd-Modal-overlay in"
    />
    <div
      class="cxd-Modal-content in"
    >
      <div
        class="cxd-Modal-header"
      >
        <a
          class="cxd-Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </a>
        <div
          class="cxd-Modal-title"
        >
          弹框
        </div>
      </div>
      <div
        class="cxd-Modal-body"
        role="dialog-body"
      >
        <form
          class="cxd-Form cxd-Form--horizontal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="cxd-Form-item cxd-Form-item--horizontal"
            data-amis-name="a"
            data-role="form-item"
          >
            <label
              class="cxd-Form-label cxd-Form-itemColumn--normal"
            >
              <span />
            </label>
            <div
              class="cxd-Form-value"
            >
              <div
                class="cxd-Form-control cxd-TextControl"
              >
                <div
                  class="cxd-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="a"
                    placeholder=""
                    size="10"
                    type="text"
                    value="1"
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="cxd-Modal-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Dialog action 3`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable value is 2
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Drawer action 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Drawer action 2`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget cxd-Drawer cxd-Drawer--right cxd-Drawer--md cxd-Modal--1th"
    role="dialog"
  >
    <div
      class="cxd-Drawer-overlay in"
    />
    <div
      class="cxd-Drawer-content in"
    >
      <a
        class="cxd-Drawer-close"
      >
        <icon-mock
          classname="icon icon-close"
          icon="close"
        />
      </a>
      <div
        class="cxd-Drawer-body"
        role="dialog-body"
      >
        <form
          class="cxd-Form cxd-Form--horizontal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="cxd-Form-item cxd-Form-item--horizontal"
            data-amis-name="a"
            data-role="form-item"
          >
            <label
              class="cxd-Form-label cxd-Form-itemColumn--normal"
            >
              <span />
            </label>
            <div
              class="cxd-Form-value"
            >
              <div
                class="cxd-Form-control cxd-TextControl"
              >
                <div
                  class="cxd-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="a"
                    placeholder=""
                    size="10"
                    type="text"
                    value="1"
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="cxd-Drawer-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Drawer action 3`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable value is 2
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Form submit 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            data-role="container"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--normal"
                  data-amis-name="a"
                  data-role="form-item"
                >
                  <div
                    class="cxd-Form-control cxd-TextControl"
                  >
                    <div
                      class="cxd-TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="a"
                        placeholder=""
                        size="10"
                        type="text"
                        value="1"
                      />
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--default cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Form submit 2`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            data-role="container"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--normal"
                  data-amis-name="a"
                  data-role="form-item"
                >
                  <div
                    class="cxd-Form-control cxd-TextControl"
                  >
                    <div
                      class="cxd-TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="a"
                        placeholder=""
                        size="10"
                        type="text"
                        value="2"
                      />
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--default cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable value is 2
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by action 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              Reload
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by action 2`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              Reload
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable value is 2
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi show loading 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Spinner-overlay in"
          />
          <div
            class="cxd-Spinner cxd-Spinner--overlay in"
            data-testid="spinner"
          >
            <div
              class="cxd-Spinner-icon cxd-Spinner-icon--lg cxd-Spinner-icon--default"
            />
          </div>
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable value is 
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi show loading 2`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable value is 3
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi silentPolling 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable value is 3
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi silentPolling 2`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              The variable value is 4
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initData 1`] = `
[
  <div
    className="cxd-Page"
    onClick={[Function]}
  >
    <div
      className="cxd-Page-content"
    >
      <div
        className="cxd-Page-main"
      >
        <div
          className="cxd-Page-body"
          role="page-body"
        >
          <span
            className="cxd-Spinner-mark"
          />
          <span
            className="cxd-TplField fr-view"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              dangerouslySetInnerHTML={
                {
                  "__html": "The variable value is 1",
                }
              }
            />
          </span>
        </div>
      </div>
    </div>
  </div>,
  <span
    className="cxd-Spinner-mark"
  />,
]
`;

exports[`Renderer:Page initFetchOn trigger initApi fetch when condition becomes ture 1`] = `
[
  <div
    className="cxd-Page"
    onClick={[Function]}
  >
    <div
      className="cxd-Page-content"
    >
      <div
        className="cxd-Page-main"
      >
        <div
          className="cxd-Page-body"
          role="page-body"
        >
          <span
            className="cxd-Spinner-mark"
          />
          <span
            className="cxd-TplField fr-view"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              dangerouslySetInnerHTML={
                {
                  "__html": "The variable value is 6",
                }
              }
            />
          </span>
        </div>
      </div>
    </div>
  </div>,
  <span
    className="cxd-Spinner-mark"
  />,
]
`;

exports[`Renderer:Page location query 1`] = `
[
  <div
    className="cxd-Page"
    onClick={[Function]}
  >
    <div
      className="cxd-Page-content"
    >
      <div
        className="cxd-Page-main"
      >
        <div
          className="cxd-Page-body"
          role="page-body"
        >
          <span
            className="cxd-Spinner-mark"
          />
          <span
            className="cxd-TplField fr-view"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              dangerouslySetInnerHTML={
                {
                  "__html": "The variable value is 5",
                }
              }
            />
          </span>
        </div>
      </div>
    </div>
  </div>,
  <span
    className="cxd-Spinner-mark"
  />,
]
`;

exports[`Renderer:Page location query 2`] = `
[
  <div
    className="cxd-Page"
    onClick={[Function]}
  >
    <div
      className="cxd-Page-content"
    >
      <div
        className="cxd-Page-main"
      >
        <div
          className="cxd-Page-body"
          role="page-body"
        >
          <span
            className="cxd-Spinner-mark"
          />
          <span
            className="cxd-TplField fr-view"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              dangerouslySetInnerHTML={
                {
                  "__html": "The variable value is 6",
                }
              }
            />
          </span>
        </div>
      </div>
    </div>
  </div>,
  <span
    className="cxd-Spinner-mark"
  />,
]
`;
